# opentrons-emulation

./: .env  .env.ci  .env.default  .env.vagrant  .gitignore  .tool-versions  ARCHITECTURE.md  CPX_SETUP.md  DEV_SETUP.md  Dockerfile  Makefile  Pipfile  README.md  RELEASE_NOTES.md  action.yaml  configuration.json  configuration_ci.json  configuration_sample.json  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  example.env  next.config.js  opentrons-emulation  package.json  pipette_versions.json  pnpm-lock.yaml  run.sh  tsconfig.json  vagrant_setup.md  virtual-box-setup.md  vite.config.ts
docker/entrypoints/pipette_management/: pyproject.toml
emulation_system/: .coveragerc  .flake8  Makefile  Pipfile  main.py  mypy.ini  opentrons_pydantic_base_model.py  pyproject.toml  setup.py
emulation_system/emulation_system/: __init__.py  consts.py  docker_expected_types.py  executable.py  git_interaction.py  github_api_interaction.py  intermediate_types.py  main.py  opentrons_emulation_configuration.py  os_state.py  parser_utils.py  settings.py  settings_models.py  source.py
emulation_system/emulation_system/command_creators/: abstract_command_creator.py  command.py  emulation_creator.py  virtual_machine_creator.py
emulation_system/emulation_system/commands/: __init__.py  abstract_command.py  abstract_command_creator.py  command.py  emulation_command.py  emulation_command_creator.py  emulation_system_command.py  load_containers_command.py  sub_process_command.py  virtual_machine_command.py  virtual_machine_command_creator.py
emulation_system/emulation_system/compose_file_creator/: __init__.py  compose_file_model.py  config_file_settings.py  container_filters.py  conversion_functions.py  conversion_layer.py  errors.py  images.py  pipette_utils.py  settings.py
emulation_system/emulation_system/compose_file_creator/conversion/: __init__.py  conversion_functions.py  intermediate_types.py  service_creator.py
emulation_system/emulation_system/compose_file_creator/conversion_logic/: __init__.py  conversion_functions.py
emulation_system/emulation_system/compose_file_creator/input/: configuration_file.py  settings.py
emulation_system/emulation_system/compose_file_creator/logging/: __init__.py  abstract_logging_client.py  can_server_logging_client.py  console.py  emulator_proxy_logging_client.py  input_logging_client.py  ot3_logging_client.py  smoothie_logging_client.py
emulation_system/emulation_system/compose_file_creator/middleware/: __init__.py
emulation_system/emulation_system/compose_file_creator/output/: compose_file_model.py  conversion_layer.py  runtime_compose_file_model.py
emulation_system/emulation_system/compose_file_creator/pipette_utils/: __init__.py  data_models.py  lookups.py  pipette_utils.py
emulation_system/emulation_system/compose_file_creator/settings/: __init__.py  config_file_settings.py  container_filters.py  custom_types.py  images.py
emulation_system/emulation_system/compose_file_creator/types/: __init__.py  final_types.py  input_types.py  intermediate_types.py
emulation_system/emulation_system/compose_file_creator/utilities/: __init__.py  conversion_utils.py  hardware_utils.py  shared_functions.py  substitute_yaml_values.py  yaml_utils.py
emulation_system/emulation_system/logging/: __init__.py  abstract_logging_client.py  can_server_logging_client.py  console.py  emulator_proxy_logging_client.py  logging_client.py
emulation_system/emulation_system/parsers/: __init__.py  abstract_parser.py  emulation_parser.py  emulation_system_parser.py  load_containers_parser.py  repo_parser.py  top_level_parser.py  virtual_machine_parser.py
emulation_system/resources/docker/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh
emulation_system/resources/vagrant/: Vagrantfile  sample-settings.json
emulation_system/resources/vagrant/provisioning_scripts/: docker.sh  packages.sh  pyenv.sh
emulation_system/src/: consts.py  emulation_creator.py  emulation_system.py  main.py  parser_utils.py  settings.py  settings_models.py
emulation_system/src/command_creators/: abstract_command_creator.py  command.py  command_creator.py  emulation_creator.py  virtual_machine_creator.py
emulation_system/src/parsers/: abstract_parser.py  emulation.py  emulation_parser.py  repo.py  repo_parser.py  top_level.py  top_level_parser.py  virtual_machine.py  virtual_machine_parser.py
emulation_system/src/script_creators/: emulation_creator.py  virtual_machine_creator.py
emulation_system/tests/: conftest.py  emulation_conftest.py  test_configuration.json  test_parser.py  testing_config_builder.py  testing_types.py  validation_helper_functions.py
emulation_system/tests/command_creators/: __init__.py  test_command.py  test_emulation.py  test_emulation_system.py  test_virtual_machine.py
emulation_system/tests/compose_file_creator/: conftest.py  test_container_parsing.py  test_conversion_logic.py  test_github_api_interaction.py  test_pipette_utils.py
emulation_system/tests/compose_file_creator/conversion_logic/: __init__.py  conftest.py  test_bind_mounts.py  test_build_args.py  test_builder_creation_logic.py  test_conversion_functions.py  test_conversion_logic.py  test_custom_env_vars.py  test_depends_on.py  test_environment_variables.py  test_extra_mounts.py  test_extra_service_creation.py  (+4 more)
emulation_system/tests/e2e/: conftest.py  consts.py  dataclass_helpers.py  helper_functions.py  system_mappings.py  test_mappings.py  test_ot3_systems.py
emulation_system/tests/parsers/: test_emulation.py
emulation_system/tests/test_resources/: sample.json
(+366 files in other folders)
