[tool.poetry]
name = "emulation-system"
version = "2.3.2"
description = "Repository for connecting all hardware emulations into a single cohesive system"
license = "Apache-2.0"
repository = "https://github.com/Opentrons/opentrons-emulation"
authors = ["Opentrons <engineering@opentrons.com>"]

[tool.poetry.dependencies]
python = "~3.10"
rich = "^12.5.1"



[tool.poetry.dev-dependencies]
black = "22.3.0"
decoy = "~=1.9.0"
docker = "6.1.2"
gitpython = "3.1.31"
mdformat_footnote = "^0.1.1"
mdformat_frontmatter = "^0.4.1"
mdformat-gfm = "^0.3.5"
mypy = "1.2.0"
pydantic = "1.10.2"
pytest = "7.0.1"
pytest-cov = "2.10.1"
pytest-lazy-fixture = "0.6.3"
pytest-xdist = "~=2.2.1"
pyyaml = "6.0"
requests = "2.31.0"
ruff = "^0.0.267"
types-pyyaml = "6.0.4"
types-requests = "2.31.0.1"



[tool.pytest.ini_options]
addopts = "--color=yes"

[tool.mypy]
plugins = ["pydantic.mypy", "decoy.mypy"]
ignore_missing_imports = false
check_untyped_defs = true
show_error_codes = true
exclude = [
    "emulation_system/compose_file_creator/output/compose_file_model.py"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = "black"

[tool.black]
# LEAVE THE LINE LENGTH AT 240!!!
# make format uses a command line option to override this to 88
# It has to be at 240 for the datamodel-code-generator in generate_compose_spec.sh to not wrap long lines
# datamodel-code-generator uses black under the hood and it will look at this file to figure out what to set line-length at
line-length = 240

[tool.ruff]
extend-ignore = ["E501", "ANN101", "ANN102", "D107", "D415"]
extend-select = ["I", "ANN", "D", "ERA"]
extend-exclude = [
    "emulation_system/compose_file_creator/output/compose_file_model.py"
]
format="grouped"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
	# Regexes are super long.
	# Annotating *args would be way too long and not very helpful.
	# Annotating **kwargs would be way too long and not very helpful.
	"emulation_system/compose_file_creator/logging/console.py" = ["ANN002", "ANN003"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
