[tool.poetry]
name = "pipette-management"
version = "2.3.2"
description = "Opentrons Emulation Pipette Management"
license = "Apache-2.0"
authors = ["Opentrons <engineering@opentrons.com>"]

[tool.poetry.dependencies]
python = "~3.10"


[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "1.2.0"
pytest = "7.0.1"
pytest-cov = "2.10.1"
pytest-lazy-fixture = "0.6.3"
pytest-xdist = "~=2.2.1"
ruff = "^0.0.267"
watchdog = "3.0.0"

[tool.pytest.ini_options]
addopts = "--color=yes"

[tool.mypy]
plugins = ["pydantic.mypy", "decoy.mypy"]
ignore_missing_imports = false
check_untyped_defs = true
show_error_codes = true
exclude = []

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = "black"

[tool.black]
# LEAVE THE LINE LENGTH AT 240!!!
# make format uses a command line option to override this to 88
# It has to be at 240 for the datamodel-code-generator in generate_compose_spec.sh to not wrap long lines
# datamodel-code-generator uses black under the hood and it will look at this file to figure out what to set line-length at
line-length = 240

[tool.ruff]
extend-ignore = ["E501", "ANN101", "ANN102", "D107", "D415"]
extend-select = ["I", "ANN", "D", "ERA"]
extend-exclude = []
format="grouped"

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
